--- a/config/prod/prow/jobs/custom-jobs.yaml
+++ b/config/prod/prow/jobs/custom-jobs.yaml
@@ -21,7 +21,7 @@ presubmits:
     cluster: "build-knative"
     spec:
       containers:
-      - image: gcr.io/knative-tests/test-infra/prow-tests:stable
+      - image: gcr.io/knative-tests/test-infra/prow-tests-go114:stable
         command:
         - "go"
         args:
@@ -102,7 +102,7 @@ periodics:
   decorate: true
   cluster: "build-knative"
   decoration_config:
-    timeout: 21600000000000
+    timeout: 6h
   extra_refs:
   - org: knative
     repo: test-infra
@@ -110,14 +110,14 @@ periodics:
     path_alias: knative.dev/test-infra
   spec:
     containers:
-    - image: gcr.io/knative-tests/test-infra/prow-tests:stable
+    - image: gcr.io/knative-tests/test-infra/prow-tests-go114:stable
       imagePullPolicy: Always
       command:
       - "go"
       args:
       - "run"
       - "./tools/cleanup/cleanup.go"
-      - "--project-resource-yaml=config/prod/prow/boskos/boskos_resources.yaml"
+      - "--project-resource-yaml=config/prod/build-cluster/boskos/boskos_resources.yaml"
       - "--days-to-keep-images=30"
       - "--hours-to-keep-clusters=24"
       - "--service-account=/etc/test-account/service-account.json"
@@ -129,6 +129,43 @@ periodics:
     - name: test-account
       secret:
         secretName: test-account
+- cron: "0 19 * * 1,3,5"
+  name: ci-knative-cleanup-performance-tests
+  labels:
+    prow.k8s.io/pubsub.project: knative-tests
+    prow.k8s.io/pubsub.topic: knative-monitoring
+    prow.k8s.io/pubsub.runID: ci-knative-cleanup-performance-tests
+  agent: kubernetes
+  decorate: true
+  cluster: "build-knative"
+  decoration_config:
+    timeout: 6h
+  extra_refs:
+  - org: knative
+    repo: test-infra
+    base_ref: master
+    path_alias: knative.dev/test-infra
+  spec:
+    containers:
+    - image: gcr.io/knative-tests/test-infra/prow-tests-go114:stable
+      imagePullPolicy: Always
+      command:
+      - "go"
+      args:
+      - "run"
+      - "./tools/cleanup/cleanup.go"
+      - "--project=knative-performance"
+      - "--project=knative-eventing-performance"
+      - "--days-to-keep-images=30"
+      - "--service-account=/etc/performance-test/service-account.json"
+      volumeMounts:
+      - name: performance-test
+        mountPath: /etc/performance-test
+        readOnly: true
+    volumes:
+    - name: performance-test
+      secret:
+        secretName: performance-test
 - cron: "0 12 * * *"
   name: ci-knative-flakes-reporter
   labels:
