--- a/config/prod/prow/jobs/custom-jobs.yaml
+++ b/config/prod/prow/jobs/custom-jobs.yaml
@@ -299,16 +299,19 @@ postsubmits:
     run_if_changed: "^(config/(prod|staging)/(prow|build-cluster)/(cluster|core|jobs|boskos|testgrid)/.*.yaml)|(tools/config-generator/templates/(prow|prow-staging)/.*.yaml)$"
     spec:
       containers:
-      - image: gcr.io/knative-tests/test-infra/prow-config-updater:latest
+      - image: gcr.io/knative-tests/test-infra/prow-tests-go114:stable
         imagePullPolicy: Always
         command:
-        - "/prow-config-updater"
+        - "go"
         args:
+        - "run"
+        - "./tools/prow-config-updater"
         - "--github-token-file=/etc/prow-robot-github-token/token"
         - "--github-userid=knative-prow-robot"
         - "--git-username='Knative Prow Robot'"
         - "--git-email=adrcunha+knative-prow-robot@google.com"
         - "--comment-github-token-file=/etc/prow-updater-robot-github-token/token"
+        - "--dry-run"
         volumeMounts:
         - name: test-account
           mountPath: /etc/test-account
