prow config updater Prow job uses go run instead of a custom image (#2029)
* prow config updater Prow job uses go run instead of a custom image

* Update based on code review feedback

--- a/config/prod/prow/jobs/custom-jobs.yaml
+++ b/config/prod/prow/jobs/custom-jobs.yaml
@@ -299,11 +299,13 @@ postsubmits:
     run_if_changed: "^(config/(prod|staging)/(prow|build-cluster)/(cluster|core|jobs|boskos|testgrid)/.*.yaml)|(tools/config-generator/templates/(prow|prow-staging)/.*.yaml)$"
     spec:
       containers:
-      - image: gcr.io/knative-tests/test-infra/prow-config-updater:latest
+      - image: gcr.io/knative-tests/test-infra/prow-tests-go114:stable
         imagePullPolicy: Always
         command:
-        - "/prow-config-updater"
+        - "go"
         args:
+        - "run"
+        - "./tools/prow-config-updater"
         - "--github-token-file=/etc/prow-robot-github-token/token"
         - "--github-userid=knative-prow-robot"
         - "--git-username='Knative Prow Robot'"
