--- a/config/prod/prow/config_knative.yaml
+++ b/config/prod/prow/config_knative.yaml
@@ -469,6 +469,17 @@ presubmits:
       dot-dev: true
       needs-dind: true
 
+  knative-sandbox/eventing-rabbitmq:
+    - build-tests: true
+      dot-dev: true
+      needs-dind: true
+    - unit-tests: true
+      dot-dev: true
+      needs-dind: true
+    - integration-tests: true
+      dot-dev: true
+      needs-dind: true
+
 periodics:
   knative/serving:
     - continuous: true
