--- a/config/prod/prow/jobs/config.yaml
+++ b/config/prod/prow/jobs/config.yaml
@@ -6834,6 +6834,142 @@ presubmits:
       - name: test-account
         secret:
           secretName: test-account
+  knative-sandbox/eventing-rabbitmq:
+  - name: pull-knative-sandbox-eventing-rabbitmq-build-tests
+    agent: kubernetes
+    context: pull-knative-sandbox-eventing-rabbitmq-build-tests
+    always_run: true
+    rerun_command: "/test pull-knative-sandbox-eventing-rabbitmq-build-tests"
+    trigger: "(?m)^/test (all|pull-knative-sandbox-eventing-rabbitmq-build-tests),?(\\s+|$)"
+    decorate: true
+    path_alias: knative.dev/eventing-rabbitmq
+    cluster: "build-knative"
+    spec:
+      containers:
+      - image: gcr.io/knative-tests/test-infra/prow-tests:stable
+        imagePullPolicy: Always
+        command:
+        - runner.sh
+        args:
+        - "./test/presubmit-tests.sh"
+        - "--build-tests"
+        securityContext:
+          privileged: true
+        volumeMounts:
+        - name: repoview-token
+          mountPath: /etc/repoview-token
+          readOnly: true
+        - name: docker-graph
+          mountPath: /docker-graph
+        - name: test-account
+          mountPath: /etc/test-account
+          readOnly: true
+        env:
+        - name: DOCKER_IN_DOCKER_ENABLED
+          value: "true"
+        - name: GOOGLE_APPLICATION_CREDENTIALS
+          value: /etc/test-account/service-account.json
+        - name: E2E_CLUSTER_REGION
+          value: us-central1
+      volumes:
+      - name: repoview-token
+        secret:
+          secretName: repoview-token
+      - name: docker-graph
+        emptyDir: {}
+      - name: test-account
+        secret:
+          secretName: test-account
+  - name: pull-knative-sandbox-eventing-rabbitmq-unit-tests
+    agent: kubernetes
+    context: pull-knative-sandbox-eventing-rabbitmq-unit-tests
+    always_run: true
+    rerun_command: "/test pull-knative-sandbox-eventing-rabbitmq-unit-tests"
+    trigger: "(?m)^/test (all|pull-knative-sandbox-eventing-rabbitmq-unit-tests),?(\\s+|$)"
+    decorate: true
+    path_alias: knative.dev/eventing-rabbitmq
+    cluster: "build-knative"
+    spec:
+      containers:
+      - image: gcr.io/knative-tests/test-infra/prow-tests:stable
+        imagePullPolicy: Always
+        command:
+        - runner.sh
+        args:
+        - "./test/presubmit-tests.sh"
+        - "--unit-tests"
+        securityContext:
+          privileged: true
+        volumeMounts:
+        - name: repoview-token
+          mountPath: /etc/repoview-token
+          readOnly: true
+        - name: docker-graph
+          mountPath: /docker-graph
+        - name: test-account
+          mountPath: /etc/test-account
+          readOnly: true
+        env:
+        - name: DOCKER_IN_DOCKER_ENABLED
+          value: "true"
+        - name: GOOGLE_APPLICATION_CREDENTIALS
+          value: /etc/test-account/service-account.json
+        - name: E2E_CLUSTER_REGION
+          value: us-central1
+      volumes:
+      - name: repoview-token
+        secret:
+          secretName: repoview-token
+      - name: docker-graph
+        emptyDir: {}
+      - name: test-account
+        secret:
+          secretName: test-account
+  - name: pull-knative-sandbox-eventing-rabbitmq-integration-tests
+    agent: kubernetes
+    context: pull-knative-sandbox-eventing-rabbitmq-integration-tests
+    always_run: true
+    rerun_command: "/test pull-knative-sandbox-eventing-rabbitmq-integration-tests"
+    trigger: "(?m)^/test (all|pull-knative-sandbox-eventing-rabbitmq-integration-tests),?(\\s+|$)"
+    decorate: true
+    path_alias: knative.dev/eventing-rabbitmq
+    cluster: "build-knative"
+    spec:
+      containers:
+      - image: gcr.io/knative-tests/test-infra/prow-tests:stable
+        imagePullPolicy: Always
+        command:
+        - runner.sh
+        args:
+        - "./test/presubmit-tests.sh"
+        - "--integration-tests"
+        securityContext:
+          privileged: true
+        volumeMounts:
+        - name: repoview-token
+          mountPath: /etc/repoview-token
+          readOnly: true
+        - name: docker-graph
+          mountPath: /docker-graph
+        - name: test-account
+          mountPath: /etc/test-account
+          readOnly: true
+        env:
+        - name: DOCKER_IN_DOCKER_ENABLED
+          value: "true"
+        - name: GOOGLE_APPLICATION_CREDENTIALS
+          value: /etc/test-account/service-account.json
+        - name: E2E_CLUSTER_REGION
+          value: us-central1
+      volumes:
+      - name: repoview-token
+        secret:
+          secretName: repoview-token
+      - name: docker-graph
+        emptyDir: {}
+      - name: test-account
+        secret:
+          secretName: test-account
 periodics:
 - cron: "10 */2 * * *"
   name: ci-knative-serving-continuous
