Use specific go versions to gvm

--- a/images/prow-tests/Dockerfile
+++ b/images/prow-tests/Dockerfile
@@ -47,6 +47,7 @@ RUN gem install mdl -v 0.5  # required because later version of mdl requires rub
 
 # Install go 1.12, 1.13, and 1.14 using https://github.com/moovweb/gvm
 # To use this, in Prow jobs set env var GO_VERSION="go1.14" (or go1.13, go1.12, etc)
+# You can use e.g. "go1.14" even if we install a specific version here like "go1.14.2"
 # (Obviously the version of Go must be installed on the image to be available -- we don't want to be downloading and installing it over and over again)
 # Missing prerequisite:
 RUN apt-get install -y bison
@@ -57,9 +58,9 @@ RUN curl -s -S -L https://raw.githubusercontent.com/moovweb/gvm/master/binscript
 # So have created "my-gvm.sh" to source the above then run gvm
 COPY images/prow-tests/my-gvm.sh /usr/local/bin
 # Install our versions of Go
-RUN my-gvm.sh install go1.12 --prefer-binary
-RUN my-gvm.sh install go1.13 --prefer-binary
-RUN my-gvm.sh install go1.14 --prefer-binary
+RUN my-gvm.sh install go1.12.17 --prefer-binary
+RUN my-gvm.sh install go1.13.10 --prefer-binary
+RUN my-gvm.sh install go1.14.2 --prefer-binary
 # Cleanup
 RUN rm -f /usr/local/bin/my-gvm.sh
 
