Update prow-tests to use gvm (#2041)
* Update prow-tests to use gvm

Fixes #1823

The image defaults to Go 1.13 per usual.

Set the environment variable GO_VERSION to something acceptable to
`gvm use` to get a different version of Go instead of using separate images.

* add copyright headers

* Use specific go versions to gvm

--- a/images/prow-tests/Dockerfile
+++ b/images/prow-tests/Dockerfile
@@ -41,15 +41,31 @@ RUN apt-get install -y uuid-runtime  # for uuidgen
 RUN apt-get install -y rubygems      # for mdl
 RUN apt-get install -y shellcheck    # for presubmit
 
-# Install go at 1.13 same as how it's installed in kubekins-e2e image, reference code here:
-# https://github.com/kubernetes/test-infra/blob/1e9b5dc3de4b268aab57c9c48120aa3dcf096bc6/images/kubekins-e2e/Dockerfile#L64
-ENV GO_TARBALL "go1.13.linux-amd64.tar.gz"
-RUN rm -rf /usr/local/go && \
-    wget -q "https://storage.googleapis.com/golang/${GO_TARBALL}" && \
-    tar xzf "${GO_TARBALL}" -C /usr/local && \
-    rm "${GO_TARBALL}"
+# Extra tools through gem
+RUN gem install mixlib-config -v 2.2.4  # required because ruby is 2.1
+RUN gem install mdl -v 0.5  # required because later version of mdl requires ruby >= 2.4
+
+# Install go 1.12, 1.13, and 1.14 using https://github.com/moovweb/gvm
+# To use this, in Prow jobs set env var GO_VERSION="go1.14" (or go1.13, go1.12, etc)
+# You can use e.g. "go1.14" even if we install a specific version here like "go1.14.2"
+# (Obviously the version of Go must be installed on the image to be available -- we don't want to be downloading and installing it over and over again)
+# Missing prerequisite:
+RUN apt-get install -y bison
+# Install the tool:
+RUN curl -s -S -L https://raw.githubusercontent.com/moovweb/gvm/master/binscripts/gvm-installer | bash
+# gvm requires one to "source /root/.gvm/scripts/gvm" after installing
+#  but in Dockerfile, each RUN is its own shell, so source'd in-RUN env vars are not propagated
+# So have created "my-gvm.sh" to source the above then run gvm
+COPY images/prow-tests/my-gvm.sh /usr/local/bin
+# Install our versions of Go
+RUN my-gvm.sh install go1.12.17 --prefer-binary
+RUN my-gvm.sh install go1.13.10 --prefer-binary
+RUN my-gvm.sh install go1.14.2 --prefer-binary
+# Cleanup
+RUN rm -f /usr/local/bin/my-gvm.sh
 
 # Extra tools through go get
+# These run using the kubekins version of Go, not any defined by `gvm`
 RUN GO111MODULE=on go get github.com/google/ko/cmd/ko@v0.5.1
 RUN GO111MODULE=on go get github.com/boz/kail/cmd/kail
 RUN go get -u github.com/golang/dep/cmd/dep
@@ -57,16 +73,16 @@ RUN go get -u github.com/jstemmer/go-junit-report
 RUN GO111MODULE=on go get -u github.com/raviqqe/liche@v0.0.0-20200229003944-f57a5d1c5be4  # stable liche version for checking md links
 RUN GO111MODULE=on go get -u github.com/google/go-licenses
 
-# Extract bazel version
+# Extract versions
 RUN bazel version > /bazel_version
-RUN bazel shutdown
-
-# Extract ko version
 RUN ko version > /ko_version
 
-# Extra tools through gem
-RUN gem install mixlib-config -v 2.2.4  # required because ruby is 2.1
-RUN gem install mdl -v 0.5  # required because later version of mdl requires ruby >= 2.4
+# Set default Go version
+ENV GO_VERSION go1.13
+# Note, it's pointless to run `my-gvm.sh use go1.13` in this Dockerfile because the PATH changes it makes won't stay in effect
+# We wrap the runner with our own which will run `gvm use $GO_VERSION` for us.
+RUN mv "$(which runner.sh)" "$(dirname "$(which runner.sh)")/kubekins-runner.sh"
+COPY images/prow-tests/runner.sh /usr/local/bin
 
 # Install our own tools
 RUN go get knative.dev/pkg/testutils/junithelper
@@ -79,8 +95,11 @@ COPY scripts /scripts
 COPY . /go/src/knative.dev/test-infra
 
 # Build custom tools in the container
-RUN make -C /go/src/knative.dev/test-infra/tools/githubhelper
-RUN cp /go/src/knative.dev/test-infra/tools/githubhelper/githubhelper .
+# TODO: githubhelper is obsolete and no longer used in current test-infra (only old release branch scripts)
+#       it should be deleted from the repo when those releases are no longer supported
+RUN go install /go/src/knative.dev/test-infra/tools/githubhelper
+# Because githubhelper was previously installed in a stupid way, it was used as `/workspace/githubhelper` so copy it
+RUN cp "$(which githubhelper)" .
 # RUN go install knative.dev/test-infra/kntest/cmd/kntest # Uncomment when you wish to have kntest installed
 
 # Remove test-infra from the container
