Can generate non-aligned test_groups now

--- a/config/prod/prow/testgrid/testgrid.yaml
+++ b/config/prod/prow/testgrid/testgrid.yaml
@@ -684,6 +684,104 @@ test_groups:
   alert_options:
     alert_mail_to_addresses: "prime-engprod-sea@google.com"
   num_failures_to_alert: 1
+- name: ci-knative-serving-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-serving-continuous-beta-prow-tests
+- name: ci-knative-serving-0.11-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-serving-0.11-continuous-beta-prow-tests
+- name: ci-knative-serving-0.12-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-serving-0.12-continuous-beta-prow-tests
+- name: ci-knative-serving-0.13-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-serving-0.13-continuous-beta-prow-tests
+- name: ci-knative-serving-0.14-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-serving-0.14-continuous-beta-prow-tests
+- name: ci-knative-client-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-client-continuous-beta-prow-tests
+- name: ci-knative-client-0.11-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-client-0.11-continuous-beta-prow-tests
+- name: ci-knative-client-0.12-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-client-0.12-continuous-beta-prow-tests
+- name: ci-knative-client-0.13-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-client-0.13-continuous-beta-prow-tests
+- name: ci-knative-client-0.14-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-client-0.14-continuous-beta-prow-tests
+- name: ci-knative-client-contrib-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-client-contrib-continuous-beta-prow-tests
+- name: ci-knative-docs-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-docs-continuous-beta-prow-tests
+- name: ci-knative-eventing-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-continuous-beta-prow-tests
+- name: ci-knative-eventing-0.11-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-0.11-continuous-beta-prow-tests
+- name: ci-knative-eventing-0.12-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-0.12-continuous-beta-prow-tests
+- name: ci-knative-eventing-0.13-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-0.13-continuous-beta-prow-tests
+- name: ci-knative-eventing-0.14-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-0.14-continuous-beta-prow-tests
+- name: ci-knative-eventing-contrib-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-contrib-continuous-beta-prow-tests
+- name: ci-knative-eventing-contrib-0.11-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-contrib-0.11-continuous-beta-prow-tests
+- name: ci-knative-eventing-contrib-0.12-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-contrib-0.12-continuous-beta-prow-tests
+- name: ci-knative-eventing-contrib-0.13-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-contrib-0.13-continuous-beta-prow-tests
+- name: ci-knative-eventing-contrib-0.14-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-contrib-0.14-continuous-beta-prow-tests
+- name: ci-knative-pkg-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-pkg-continuous-beta-prow-tests
+- name: ci-knative-caching-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-caching-continuous-beta-prow-tests
+- name: ci-knative-observability-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-observability-continuous-beta-prow-tests
+- name: ci-knative-sample-controller-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-sample-controller-continuous-beta-prow-tests
+- name: ci-knative-sample-source-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-sample-source-continuous-beta-prow-tests
+- name: ci-knative-test-infra-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-test-infra-continuous-beta-prow-tests
+- name: ci-knative-serving-operator-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-serving-operator-continuous-beta-prow-tests
+- name: ci-knative-serving-operator-0.11-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-serving-operator-0.11-continuous-beta-prow-tests
+- name: ci-knative-serving-operator-0.12-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-serving-operator-0.12-continuous-beta-prow-tests
+- name: ci-knative-serving-operator-0.13-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-serving-operator-0.13-continuous-beta-prow-tests
+- name: ci-knative-serving-operator-0.14-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-serving-operator-0.14-continuous-beta-prow-tests
+- name: ci-knative-eventing-operator-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-operator-continuous-beta-prow-tests
+- name: ci-knative-eventing-operator-0.11-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-operator-0.11-continuous-beta-prow-tests
+- name: ci-knative-eventing-operator-0.12-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-operator-0.12-continuous-beta-prow-tests
+- name: ci-knative-eventing-operator-0.13-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-operator-0.13-continuous-beta-prow-tests
+- name: ci-knative-eventing-operator-0.14-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-operator-0.14-continuous-beta-prow-tests
+- name: ci-google-knative-gcp-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-google-knative-gcp-continuous-beta-prow-tests
+- name: ci-google-knative-gcp-0.12-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-google-knative-gcp-0.12-continuous-beta-prow-tests
+- name: ci-google-knative-gcp-0.13-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-google-knative-gcp-0.13-continuous-beta-prow-tests
+- name: ci-google-knative-gcp-0.14-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-google-knative-gcp-0.14-continuous-beta-prow-tests
+- name: ci-knative-net-certmanager-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-net-certmanager-continuous-beta-prow-tests
+- name: ci-knative-net-contour-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-net-contour-continuous-beta-prow-tests
+- name: ci-knative-net-http01-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-net-http01-continuous-beta-prow-tests
+- name: ci-knative-net-istio-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-net-istio-continuous-beta-prow-tests
+- name: ci-knative-net-kourier-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-net-kourier-continuous-beta-prow-tests
+- name: ci-knative-sandbox-operator-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-sandbox-operator-continuous-beta-prow-tests
+- name: ci-knative-sandbox-eventing-kafka-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-sandbox-eventing-kafka-continuous-beta-prow-tests
 dashboards:
 - name: serving
   dashboard_tab:
