add oauth token to crier and hook

--- a/config/staging/prow/cluster/400-hook.yaml
+++ b/config/staging/prow/cluster/400-hook.yaml
@@ -44,6 +44,7 @@ spec:
         - --dry-run=false
         - --config-path=/etc/config/config.yaml
         - --job-config-path=/etc/job-config
+        - --github-token-path=/etc/github/oauth
         - --github-endpoint=http://ghproxy
         - --github-endpoint=https://api.github.com
         ports:
