--- a/config/staging/prow/cluster/400-crier.yaml
+++ b/config/staging/prow/cluster/400-crier.yaml
@@ -37,6 +37,7 @@ spec:
         - --kubernetes-gcs-workers=1
         - --config-path=/etc/config/config.yaml
         - --job-config-path=/etc/job-config
+        - --github-token-path=/etc/github/oauth
         - --github-workers=5
         - --github-endpoint=http://ghproxy
         - --github-endpoint=https://api.github.com
