--- a/config/staging/prow/jobs/config.yaml
+++ b/config/staging/prow/jobs/config.yaml
@@ -45,6 +45,8 @@ presubmits:
           mountPath: /etc/test-account
           readOnly: true
         env:
+        - name: GO_VERSION
+          value: go1.14
         - name: GOOGLE_APPLICATION_CREDENTIALS
           value: /etc/test-account/service-account.json
         - name: E2E_CLUSTER_REGION
@@ -82,6 +84,8 @@ presubmits:
           mountPath: /etc/test-account
           readOnly: true
         env:
+        - name: GO_VERSION
+          value: go1.14
         - name: GOOGLE_APPLICATION_CREDENTIALS
           value: /etc/test-account/service-account.json
         - name: E2E_CLUSTER_REGION
@@ -119,6 +123,8 @@ presubmits:
           mountPath: /etc/test-account
           readOnly: true
         env:
+        - name: GO_VERSION
+          value: go1.14
         - name: GOOGLE_APPLICATION_CREDENTIALS
           value: /etc/test-account/service-account.json
         - name: E2E_CLUSTER_REGION
@@ -157,6 +163,8 @@ presubmits:
           mountPath: /etc/test-account
           readOnly: true
         env:
+        - name: GO_VERSION
+          value: go1.14
         - name: GOOGLE_APPLICATION_CREDENTIALS
           value: /etc/test-account/service-account.json
         - name: E2E_CLUSTER_REGION
@@ -194,6 +202,8 @@ presubmits:
           mountPath: /etc/test-account
           readOnly: true
         env:
+        - name: GO_VERSION
+          value: go1.14
         - name: GOOGLE_APPLICATION_CREDENTIALS
           value: /etc/test-account/service-account.json
         - name: E2E_CLUSTER_REGION
@@ -231,6 +241,8 @@ presubmits:
           mountPath: /etc/test-account
           readOnly: true
         env:
+        - name: GO_VERSION
+          value: go1.14
         - name: GOOGLE_APPLICATION_CREDENTIALS
           value: /etc/test-account/service-account.json
         - name: E2E_CLUSTER_REGION
