fix the path of testgrid config file

--- a/config/prod/Makefile
+++ b/config/prod/Makefile
@@ -18,6 +18,6 @@ PROW_HOST     := https://prow.knative.dev
 TESTGRID_GCS  := knative-testgrid
 
 KNATIVE_CONFIG   := config_knative.yaml
-TESTGRID_CONFIG  ?= testgrid/testgrid.yaml
+TESTGRID_CONFIG  ?= prow/testgrid/testgrid.yaml
 
 include ../prow_common.mk
