enable flaky test tools for knative-gcp

--- a/tools/flaky-test-reporter/config/config.yaml
+++ b/tools/flaky-test-reporter/config/config.yaml
@@ -87,3 +87,7 @@ jobConfigs:
   - name: ci-knative-test-infra-continuous
     repo: test-infra
     type: postsubmit
+  - name: ci-google-knative-gcp-continuous
+    org: google
+    repo: knative-gcp
+    type: postsubmit
