Spyglass highlights 'Metrics logs'.
https://github.com/google/knative-gcp/pull/1069 logs metrics of Pods in a failed test. Highlighting them will make it easier to find these logs.

--- a/config/prod/prow/core/config.yaml
+++ b/config/prod/prow/core/config.yaml
@@ -82,6 +82,8 @@ deck:
           # Code is outdated
           # TODO(chizhg): this error message should be defined by the common test infrastructure
           - 'Please run .*hack/update-codegen.sh'
+          # Metrics are logged only for Pods in a failed test.
+          - 'Metrics logs'
       required_files:
       - build-log.txt
     - lens:
