--- a/images/clear-test-infra-alerts/Makefile
+++ b/images/clear-test-infra-alerts/Makefile
@@ -13,4 +13,7 @@
 # limitations under the License.
 
 IMAGE_NAME = monitoring/clear-alerts
+DOCKERBUILDARGS = --build-arg TOOL_NAME=clearalerts --build-arg TOOLS_SUBDIR=monitoring/
+DOCKERFILE = ../tool/Dockerfile
+
 include ../simple-image.mk
